<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.BoardMore">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:src="@drawable/covery_logo_2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:background="@drawable/radius_corner"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/infoId"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/account_profile"
                android:src="@drawable/ic_profile"
                android:layout_width="90dp"
                android:layout_height="90dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="start|center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/str_name"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:background="@drawable/radius_corner"
        android:padding="10dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/pushSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pushName"
            android:textSize="16sp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/autoPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autoPlay"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:background="@drawable/radius_corner"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:text="@string/announce"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:drawableRight="@drawable/baseline_arrow_forward_ios_24"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:text="@string/qna_btn"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:drawableRight="@drawable/baseline_arrow_forward_ios_24"/>
        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rotationX="4"
            android:text="로그아웃" />
    </LinearLayout>

</LinearLayout>