<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".LoginActivity">



    <Button
        android:id="@+id/main_google_button"
        android:layout_width="120dp"
        android:layout_height="26dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/ic_launcher_background"
        android:text="@string/action_sign_in_google"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/transparency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo">

    </Button>

   <Button
        android:id="@+id/main_pass_button"
        android:layout_width="163dp"
        android:layout_height="27dp"
        android:layout_marginTop="100dp"
        android:background="@color/transparency"
        android:text="@string/action_pass"
        android:textColor="#5E35B1"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/covery_logo_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="137dp"
        android:layout_height="22dp"
        android:layout_marginTop="30dp"
        android:background="@color/ic_launcher_background"
        android:text="카카오로 시작하기"
        android:textSize="18sp"
        app:backgroundTint="@color/transparency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_google_button" />

</androidx.constraintlayout.widget.ConstraintLayout>